apps/vote-ui/k8s/openshift/base/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: vote-api
    app.openshift.io/vcs-uri: https://github.com/jwennerberg/vote-ui.git
  labels:
    app: ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: vote
    app.openshift.io/runtime: python
  name: ui
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: ui
    deploymentconfig: ui
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ui
        deploymentconfig: ui
    spec:
      containers:
      - image: ""
        imagePullPolicy: Always
        name: ui
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9090
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - ui
      from:
        kind: ImageStreamTag
        name: ui:latest
    type: ImageChange
  - type: ConfigChange
